--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="logo">
-            <img src="img/logo.png" width="100px" alt="Logo do Clínica Cardiológica HeartCare+">
+            <img src="img/logo.png" width="200rem" alt="Logo do Clínica Cardiológica HeartCare+">
         </div>
         <div class="menu">
             <fieldset>
@@ -30,13 +30,13 @@
                 <div style="margin: 50px;">
                     <fieldset>
                         <p>
-                            <h1> 
-                            Somos os <strong>melhores</strong> na área da cardiologia. Consulte conosco! 
+                            <h1 style="text-align: center;"> 
+                            Sobre nós! 
                             </h1>
                         </p>
                         <blockquote style="text-align:justify;"> 
-                            Na HeartCare+, nossa missão é cuidar do seu coração com excelência, proporcionando atendimento especializado, acolhedor e de alta qualidade. 
-                            Somos uma clínica cardiológica que prioriza o bem-estar e a saúde cardiovascular de nossos pacientes, oferecendo cuidados completos e personalizados para cada necessidade.
+                            Na HeartCare+, com uma equipe altamente qualificada de cardiologistas, nós nos dedicamos a prevenir, diagnosticar e tratar doenças do coração com tecnologia de ponta e um atendimento humanizado. 
+                            Nossos profissionais são comprometidos em garantir que você tenha a melhor orientação para manter o seu coração saudável e com qualidade de vida.
                         </blockquote> 
                     </fieldset>
                 </div>
