--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <div class="logo">
-            <img src="img/logo.png" width="100px" alt="Logo do Clínica Cardiológica HeartCare+">
+            <img src="img/logo.png" width="200rem" alt="Logo do Clínica Cardiológica HeartCare+">
         </div>
         <div class="menu">
             <fieldset>
