--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="menu">
             <fieldset>
-                <p><a href="#">Página Principal</a></p><hr>
+                <p><a href="index.html">Página Principal</a></p><hr>
                 <p><a href="about.html">Sobre a Clínica</a></p><hr>
                 <p><a href="horarios.html">Horário de Atendimento</a></p><hr>
                 <p><a href="contact.html">Contato</a></p><hr>
