--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         </div>
         <div class="menu">
             <fieldset>
-                <p><a href="#">Página Principal</a></p><hr>
+                <p><a href="index.html">Página Principal</a></p><hr>
                 <p><a href="about.html">Sobre a Clínica</a></p><hr>
                 <p><a href="horarios.html">Horário de Atendimento</a></p><hr>
                 <p><a href="contact.html">Contato</a></p><hr>
@@ -23,7 +23,7 @@
 
         <div class="main">
             <div class="header">
-                <img src="img/medico-consulta.jpg" alt="Família Saudável" width="1000px">
+                <img src="img/clinica.jpg" alt="Família Saudável" width="1000px">
             </div>
     
             <div class="content">   
